--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ a {
   color: inherit;
 }
 
-a.active li {
+a.active {
   color: red !important;
 }
 
@@ -52,6 +52,7 @@ a.active li {
   justify-content: center;
   width: 100%;
   height: 80vh;
+  flex-wrap: wrap;
 }
 
 .container h1 {
@@ -83,7 +84,9 @@ a.active li {
 }
 
 .contactForm button,
-.contactBtns button {
+.contactBtns button,
+.jobcard button,
+.jobdetails button {
   background-color: #000;
   color: #fff;
   padding: 8px 10px;
@@ -92,4 +95,25 @@ a.active li {
   border-radius: 30px;
   font-size: 12px;
   cursor: pointer;
+}
+
+.jobcard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 30px;
+  width: 100%;
+}
+
+.jobcard>a {
+  padding: 40px;
+  background: #808080;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.jobdetails{
+  flex-direction: column;
 }
